--- a/collabora-muflo/0.0.2/templates/hpa.yaml
+++ b/collabora-muflo/0.0.2/templates/hpa.yaml
@@ -22,12 +22,16 @@ spec:
   - type: Resource
     resource:
       name: memory
-      targetAverageUtilization: {{ .Values.global.app.scaling.target.memory }}
+      target:
+        type: Utilization
+        averageUtilization: {{ .Values.global.app.scaling.target.memory }}
 {{- end }}
 {{- if gt .Values.global.app.scaling.target.cpu 1.0 }}
   - type: Resource
     resource:
       name: cpu
-      targetAverageUtilization: {{ .Values.global.app.scaling.target.cpu }}
+      target:
+        type: Utilization
+        averageUtilization: {{ .Values.global.app.scaling.target.cpu }}
 {{- end }}
 {{- end }}
