--- a/collabora-muflo/0.0.2/values.yaml
+++ b/collabora-muflo/0.0.2/values.yaml
@@ -6,11 +6,11 @@ global:
     name: collabora-muflo
     urlScheme: HTTPS # either HTTP or HTTPS
     scaling:
-      enabled: true
+      enabled: false
       min: 1
       max: 10
       target:
-        cpu: 70
+        cpu: 0
         memory: 0
     monitoring:
       activate: false
@@ -82,14 +82,14 @@ hosts:
 namespace:
   collabora: collabora
 
-resources:
+resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  limits:
-    cpu: 2000m
+  #limits:
+          #cpu: 2000m
     #memory: 256Mi
-  requests:
-    cpu: 100m
+    #requests:
+          #cpu: 100m
     #memory: 128Mi
