disabled hpa on 0.0.1 and 0.0.2

--- a/collabora-muflo/0.0.2/values.yaml
+++ b/collabora-muflo/0.0.2/values.yaml
@@ -10,8 +10,8 @@ global:
       min: 1
       max: 10
       target:
-        cpu: 0
-        memory: 0
+        cpu: 70
+        memory: 70
     monitoring:
       activate: false
       port: 9980
@@ -62,7 +62,7 @@ deployment:
 
 environmentVariablesCool:
   - name: extra_params
-    value: --o:ssl.enable=true
+    value: --o:ssl.enable=false
   - name: username
     value:
   - name: password
@@ -87,9 +87,9 @@ resources: {}
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  #limits:
-          #cpu: 2000m
-    #memory: 256Mi
-    #requests:
-          #cpu: 100m
-    #memory: 128Mi
+  # limits:
+  #  cpu: 2000m
+  #  memory: 256Mi
+  # requests:
+  #  cpu: 100m
+  #  memory: 128Mi
