--- a/collabora-muflo/0.0.2/values.yaml
+++ b/collabora-muflo/0.0.2/values.yaml
@@ -6,14 +6,14 @@ global:
     name: collabora-muflo
     urlScheme: HTTPS # either HTTP or HTTPS
     scaling:
-      enabled: false
+      enabled: true
       min: 1
       max: 10
       target:
         cpu: 70
-        memory: 70
+        memory: 0
     monitoring:
-      activate: false
+      activate: true
       port: 9980
       path: "/cool/getMetrics"
     service:
@@ -82,7 +82,7 @@ hosts:
 namespace:
   collabora: collabora
 
-resources: {}
+resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -90,6 +90,6 @@ resources: {}
   # limits:
   #  cpu: 2000m
   #  memory: 256Mi
-  # requests:
-  #  cpu: 100m
+  requests:
+    cpu: 200m
   #  memory: 128Mi
