added server_name param to 0.0.2

--- a/collabora-muflo/0.0.2/values.yaml
+++ b/collabora-muflo/0.0.2/values.yaml
@@ -68,7 +68,9 @@ environmentVariablesCool:
   - name: password
     value:
   - name: domain
-    value: collabora
+    value: yournextcloudserverurl
+  - name: server_name
+    value: coolwsd.public.example.com
 
 service:
   name: collabora-muflo
